<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="test">Test</string>
    <string name="app_name">Smart Parking</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="about_text">    У лукоморья дуб зелёный;\n
    Златая цепь на дубе том:\n
    И днём и ночью <b>кот учёный</b>\n
    Всё ходит по цепи кругом;\n
    Идёт <b>направо</b> - песнь заводит,\n<b>Налево</b> - сказку говорит.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_chelni_parks">ChelniParks</string>

    <string-array name="ChelniParks">
        <item>Выберите парковку</item>
        <item>Автостоянка Круиз</item>
        <item>Автостоянка, ООО ГАРАЖ 500</item>
    </string-array>
    <string-array name="KazanParks">
        <item>Выберите парковку</item>
        <item>ТЦ Кольцо</item>
        <item>На ул. Чистопольская</item>
    </string-array>
    <string-array name="spinner">
        <item>Выберите город</item>
        <item>Челны</item>
        <item>Казань</item>
    </string-array>

    <string name="title_activity_kazan_parks">Казанские Парковки</string>
    <string name="title_activity_info">Информация</string>
    <string name="title_activity_kruiz">Автостоянка Круиз</string>
    <string name="title_activity_garag500">Гараж 500</string>
    <string name="title_activity_kolco">ТЦ Кольцо</string>
    <string name="title_activity_chistopolskaya">Чистопольская</string>
    <string name="title_activity_kruiz_map">KruizMap</string>
    <string name="title_activity_kolco_map">KolcoMap</string>
    <string name="title_activity_oplata">Оплата</string>
    <string name="title_activity_stopwatch">Stopwatch</string>

    <color name="back">#3d4140</color>
    <color name="purple_light">#ffffff</color>
    <color name="purple_dark">#353838</color>

    <string name="menu_1">Оплата</string>
    <string name="menu_2">Заправки и ТО</string>
    <string name="menu_3">Парковки рядом</string>
    <string name="menu_4">Пустое меню</string>
    <string name="action_item_1">Item 1</string>
    <string name="action_item_2">Item 2</string>
    <string name="action_item_3">Item 3</string>
    <string name="sample11_head">Местоположение</string>

    <string-array name="views_array">
        <item>Первый экран</item>
        <item>Второй экран</item>
        <item>Третий экран</item>
    </string-array>

    <string name="menu">Меню</string>
    <string name="title_activity_server_test">ServerTest</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_test">Test</string>
    <string name="city_parkings">Парковки города</string>
    <string name="find_me">Найти меня</string>
    <string name="btn_find_me">Мы пытаемся найти вас. Пожалуйста, подождите...</string>
    <string name="dlg_find_me">Для работы этой функции нужно включить местоположение по сетям</string>
    <string name="dlg_find_me_ok">Перейти</string>
    <string name="dlg_find_me_no">Я сам выберу город</string>
    <string name="dlg_find_me_city">Определить ваш город?</string>
    <string name="dlg_find_me_yes">Да</string>
    <string name="exit">Нажмите ещё раз для выхода</string>
    <string name="kazan_parkings">Парковки Казани</string>
    <string name="search_nearby">Парковки рядом</string>
    <string name="street">Улица:</string>
    <string name="working_hours">Время работы:</string>
    <string name="phone">Телефон:</string>
    <string name="petersburg">Петербургская, 1</string>
    <string name="daily">Ежедневно 10:00–22:00</string>
    <string name="payment">Оплата</string>
    <string name="show_on_map">Показать на карте</string>
    <string name="scheme_of_a_parking">Схема парковки</string>
    <string name="time">Время:</string>
    <string name="park">Паркуемся!</string>
    <string name="refresh">Обновить</string>
    <string name="time_base">Времена в базе:</string>
    <string name="leave">Уезжаем</string>
    <string name="show_map">Показать места на карте</string>
    <string name="internet_connect_err">Ошибка подключения к интернету</string>
    <string name="work_internet">Соеденитесь с рабочим подключением к интернету</string>
    <string name="gps_status">Статус GPS</string>
    <string name="gps_inform">Невозможно получить информацию о местоположении. Пожалуйста, включите GPS</string>
    <string name="near_places">Ближайшие места</string>
    <string name="place_not_found">Жаль, никаких мест не найдено</string>
    <string name="place_error">Ошибка мест</string>
    <string name="occured_error">Простите, произошла неизвестная ошибка</string>
    <string name="query_limit">Жаль, но тайм-аут подключения к Google Places</string>
    <string name="denied">Жаль, произошла ошибка. Запрос отклоняется</string>
    <string name="invalid_request">Жаль, произошла ошибка. Неверный запрос</string>
    <string name="error_occured">Жаль, произошла ошибка</string>
    <string name="load_places"><b>Поиск</b><br />Загрузка мест...</string>
    <string name="name">Имя:</string>
    <string name="address">Адрес:</string>
    <string name="load_profile">Загрузка профиля..</string>
    <string name="chistopolskaya">Чистопольская, 64/1</string>
    <string name="round_the_clock">Круглосуточно</string>
    <string name="no_bitch">нет</string>
    <string name="chelni_parkings">Парковки Челнов</string>
    <string name="transportny">Транспортный проезд, 51/2 ст1</string>
    <string name="pobeda">40 лет Победы, 52Б</string>
    <string name="title_activity_camera">Camera</string>
    <string name="title_activity_configuration">Configuration</string>
    <string name="type_here">Type here</string>
    <string name="save">Save</string>
    <string name="e_refresh">Refresh</string>

</resources>
